# sre-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp.json  pyproject.toml
.github/workflows/: ci.yaml
demo/: OUTPUT.md  README.md  run_demo.py
dev/alertmanager/: alertmanager.yml
dev/prometheus/: prometheus.yml
src/sre_mcp_server/: __init__.py  server.py
src/sre_mcp_server/prompts/: alerts.py  incident_rca.py  registry.py  workflows.py
src/sre_mcp_server/resources/: alert_rules.py  capacity.py  cloudwatch.py  error_budget.py  incidents.py  oncall.py  slo.py
src/sre_mcp_server/tools/: aws.py  base.py  capacity.py  correlation.py  deployments.py  grafana.py  incidents.py  kubernetes.py  oncall.py  pagerduty.py  runbooks.py
tests/: conftest.py  test_prompts.py  test_resources.py  test_server.py  test_tools.py
