[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre-mcp-server"
version = "0.1.0"
description = "Production-grade MCP server for SRE operations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "kubernetes>=30.1.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sre-mcp-server = "sre_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sre_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
